--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
     <div id="p1" class="paper">
       <div class="front">
           <div class="front-cover">
-            <p class="cover-title">Our Love Story</p>
+            <p class="cover-title">Our  Love  Story</p>
           </div>
           <div id="f1" class="front-content">
-            <img src="./images/cover.jpg" alt="Image 1">
+            <img src="image2-removebg-preview.png" alt="Image 1">
           </div>
           
       </div>
@@ -70,13 +70,13 @@
     <div id="p2" class="paper">
       <div class="front">
         <div id="f2" class="front-content">
-          <img src="./images/image3.jpg" alt="Image 3">
+          <img src="image3.jpg" alt="Image 3">
           <p>First Memory Together ❤️</p>
         </div>
       </div>
       <div class="back">
         <div id="b2" class="back-content">
-          <img src="./images/image4.jpg" alt="Image 4">
+          <img src="image4.jpg" alt="Image 4">
           <p>Why I Fell for You 😊</p>
         </div>
       </div>
@@ -86,13 +86,13 @@
     <div id="p3" class="paper">
       <div class="front">
         <div id="f3" class="front-content">
-          <img src="./images/image5.jpg" alt="Image 5">
+          <img src="image5.jpg" alt="Image 5">
           <p>Our Funniest Moment 💑</p>
         </div>
       </div>
       <div class="back">
         <div id="b3" class="back-content">
-          <img src="./images/image6.jpg" alt="Image 6">
+          <img src="image6.jpg" alt="Image 6">
           <p>She: Friends ? <br> Me: Romance pending! 😏</p>
         </div>
       </div>
@@ -102,13 +102,13 @@
     <div id="p4" class="paper">
       <div class="front">
         <div id="f4" class="front-content">
-          <img src="./images/image7.jpg" alt="Image 7">
+          <img src="image7.jpg" alt="Image 7">
           <p>Best Date We Had 🎉</p>
         </div>
       </div>
       <div class="back">
         <div id="b4" class="back-content">
-          <img src="images/image8.png" alt="Image 8">
+          <img src="image8.png" alt="Image 8">
           <p>A Romantic Path 😻</p>
         </div> 
       </div>
@@ -118,13 +118,13 @@
     <div id="p5" class="paper">
       <div class="front">
         <div id="f5" class="front-content">
-          <img src="images/image9.png" alt="Image 9">
+          <img src="image9.png" alt="Image 9">
           <p>What I Miss the Most🥺<br>My Shy Pookie? 😘</p>
         </div>
       </div>
       <div class="back">
         <div id="b5" class="back-content">
-          <img src="images/image10.jpg" alt="Image 10">
+          <img src="image10.jpg" alt="Image 10">
           <p>Best Valentine's Day🥰💘</p>
         </div>
       </div>
@@ -134,13 +134,13 @@
     <div id="p6" class="paper">
       <div class="front">
         <div id="f6" class="front-content">
-          <img src="images/image11.jpg" alt="Image 11">
+          <img src="image11.jpg" alt="Image 11">
           <p>First Bike Ride💝😍</p>
         </div>
       </div>
       <div class="back">
         <div id="b6" class="back-content">
-          <img src="images/image12.jpg" alt="Image 12">
+          <img src="image12.jpg" alt="Image 12">
           <p>First Temple Date 🧑‍❤️‍👩🧑‍❤️‍💋‍👩</p>
         </div>
       </div>
@@ -150,13 +150,13 @@
     <div id="p7" class="paper">
       <div class="front">
         <div id="f7" class="front-content">
-          <img src="images/image13.jpg" alt="Image 13">
+          <img src="image13.jpg" alt="Image 13">
           <p>Our Future Together 🌍</p>
         </div>
       </div>
       <div class="back">
         <div id="b7" class="back-content">
-          <img src="images/image14.png" alt="Image 14">
+          <img src="image14.png" alt="Image 14">
           <p>A Promise to You 💍</p>
         </div>
       </div>
@@ -166,7 +166,7 @@
 <div id="p8" class="paper">
   <div class="front">
     <div id="f8" class="front-content">
-      <img src="images/image15.jpg" alt="Image 15">
+      <img src="image15.jpg" alt="Image 15">
       <p>Can we start again?</p>
     </div>
   </div>
